# IRC-Chat

./: .gitignore  Cargo.toml  readme.md
client/: Cargo.toml
client/src/: main.rs  socket.rs
client/src/tcp_client/: broker.rs  feed.rs  mod.rs  server.rs
client/src/window/: mod.rs
lib/: Cargo.toml
lib/src/: encryption.rs  io.rs  lib.rs  stream.rs
lib/src/encoding/: decode.rs  encoder.rs  mod.rs  reader.rs  writer.rs
server/: Cargo.toml
server/src/: main.rs  socket.rs
server/src/server/: broker.rs  client.rs  feed.rs  mod.rs
