[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.1", features = ["full"]}
zeroize = "1.3.0"
rsa = "0.5.0"
x25519-dalek = "1.2.0"
rand_core = { version = "0.5", default-features = false }
rand2 = { package = "rand", version = "0.8.5" }
sha3 = "0.10.2"
lib = {path = "../lib"}